--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-ssh-no-cpu-features",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "SSH2 with Promises",
   "main": "lib/cjs/index.js",
   "typings": "lib/typings/index.d.ts",
@@ -17,8 +17,9 @@
   "scripts": {
     "test": "ava",
     "lint": "(tsc -p . --noEmit) && (eslint . --ext .ts) && (prettier --list-different src/*.ts)",
-    "build:clean": "rmdir /s /q lib",
-    "build:esm": "tsc --module es2015 --target es2018 --outDir lib/esm && move lib/esm/index.js lib/esm/index.mjs",
+    "prepare": "yarn build:clean && yarn build:cjs && yarn build:esm && yarn build:typings",
+    "build:clean": "rimraf lib",
+    "build:esm": "tsc --module es2015 --target es2018 --outDir lib/esm && shx mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc --module commonjs --target es2018 --outDir lib/cjs",
     "build:typings": "tsc --declaration --outDir lib/typings --emitDeclarationOnly"
   },
@@ -43,6 +44,8 @@
   "devDependencies": {
     "@types/shell-escape": "^0.2.0",
     "ava": "^3.15.0",
+    "rimraf": "^5.0.1",
+    "shx": "^0.3.4",
     "eslint-config-steelbrain": "^11.0.0",
     "node-pty": "^0.10.1",
     "ssh2-streams": "^0.4.10",
@@ -56,7 +59,7 @@
     "sb-promise-queue": "^2.1.0",
     "sb-scandir": "^3.1.0",
     "shell-escape": "^0.2.0",
-    "ssh2-no-cpu-features": "^1.0.0"
+    "ssh2-no-cpu-features": "^2.0.0"
   },
   "ava": {
     "files": [
